# Protein-Secondary-Structure-Prediction

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt  test_system.py
configs/: default.yaml
demo/: app.py
notebooks/: quick_start.ipynb
scripts/: train.py
src/: __init__.py
src/eval/: __init__.py  evaluator.py
src/losses/: __init__.py  metrics.py
src/train/: __init__.py  trainer.py
src/utils/: __init__.py  core.py  protein.py
tests/: test_models.py
